--- a/thinkdepthai_deepresearch.ipynb
+++ b/thinkdepthai_deepresearch.ipynb
@@ -42,10 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# run the demo. it can take 10 ~ 30 minutes to finish the task.\n",
     "from langchain_core.messages import HumanMessage\n",
     "thread = {\"configurable\": {\"thread_id\": \"1\", \"recursion_limit\": 50}}\n",
     "result = await full_agent.ainvoke({\"messages\": [HumanMessage(content=\"Write a paper to discuss the influence of AI interaction on interpersonal relations, considering AI's potential to fundamentally change how and why individuals relate to each other.\")]}, config=thread)"
